# lvgl-pdf-viewer

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md
cmake/: BuildMuPDF.cmake  FindMuPDF.cmake  toolchain-t507.cmake
docs/: architecture.md  continuous-scroll-design.md  termux-x11-touch-debug.md  virtual-scroll-design.md
scripts/: analyze_scroll_log.py  replay_continuous_scroll_regression.sh  run_all_tests.sh  run_gui_termux_x11.sh  test_continuous_scroll_regression.sh  test_pageapi_regression.sh  test_search_regression.sh
src/: lv_conf.h  main.c
src/pdf/: pdf_view.c  pdf_view.h
src/platform/: platform.h  platform_sdl2.c  platform_win32.c
src/ui/: ui_main.c  ui_main.h
tests/: test_pageapi_cli.c  test_search_cli.c
